# libstock-ffi-prototype-v1

./: .gitignore  Cargo.toml  Makefile  README.md  exp.c
codegen/: Cargo.toml
codegen/src/: alloc.rs  interop.rs  lib.rs  serializer.rs
codegen/src/interop/: common.rs  enumeration.rs  structure.rs
examples/: auto_tryfrom.rs
src/: converter.rs  data.rs  data2.rs  errors.rs  fields.rs  header.rs  lib.rs  reader.rs  serializer.rs  structure.rs  types.rs  utils.rs
src/converter/: decimal.rs
src/fields/: exchange.rs  market_data.rs  price_data.rs
src/types/: interop.rs
